[package]
name = "covert-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = "0.12.4"
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["serde"] }
